--- a/vignettes/example.Rmd
+++ b/vignettes/example.Rmd
@@ -42,15 +42,16 @@ axisPhylo(backward = F)
 ```
 
 ```{r}
-res=credating(obsphy,dates,nbIts = 1000,rate=10,useCoalPrior = T,updateRate = 1)
+res=credating(obsphy,dates,nbIts = 10000,rate=10,useCoalPrior = T,updateRate = 2, updateNeg = T)
 plot(res$tree)
 axisPhylo(backward = F)
 ```
 ```{r}
   nc=ncol(res$record)
   par(mfrow=c(2,2))
-  plot(res$record[,nc-1],main='Likelihood',type='l',xlab='Sampled iterations',ylab='')
-  plot(res$record[,nc-2],main='Date of root',type='l',xlab='Sampled iterations',ylab='')
-  plot(res$record[,nc],main='Rate',type='l',xlab='Sampled iterations',ylab='')
+  plot(res$record[,nc-2],main='Likelihood',type='l',xlab='Sampled iterations',ylab='')
+  plot(res$record[,nc-3],main='Date of root',type='l',xlab='Sampled iterations',ylab='')
+  plot(res$record[,nc-1],main='Rate',type='l',xlab='Sampled iterations',ylab='')
+  plot(res$record[,nc],main='Neg',type='l',xlab='Sampled iterations',ylab='')
   par(mfrow=c(1,1))
 ```
