added Harris2010 example

--- a/vignettes/harris2010.Rmd
+++ b/vignettes/harris2010.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Example of using CreDating"
+title: "Example of using CreDating on the data of Harris et al (2010)"
 author: "Xavier Didelot"
 date: "`r Sys.Date()`"
 output: html_notebook
@@ -12,40 +12,17 @@ library(CreDating)
 library(ape)
 library(phytools)
 set.seed(0)
-```
-
-##Data
-
-We consider a random timed tree with 20 leaves, with the root in 2000. 
-
-```{r}
-nsam <- 20
-phy <- rtree(nsam, br = rexp)
-phy$root.time <- 2000
-plot(phy)
+data(harris2010)
+plot(harris2010$tree, show.tip.label = F)
 axisPhylo(backward = F)
 ```
 
-We can extract the sampling dates.
-```{r}
-dates = leafDates(phy)
-```
-
-On each branch we observe a number of substitutions which is distributed $\mathrm{Poisson}(rl)$
-where $l$ is the branch length and 
-$r=10$ per year is the real substitution rate.
-```{r}
-obsphy=phy
-obsphy$root.time=NULL
-obsphy$edge.length=unlist(lapply(obsphy$edge.length*10,function (x) rpois(1,x)))
-plot(obsphy)
-axisPhylo(backward = F)
-```
+##Root-to-tip analysis
 
 Let's do a root-to-tip regression analysis:
 
 ```{r}
-res=roottotip(obsphy,dates)
+res=roottotip(harris2010$tree,harris2010$dates)
 ```
 
 ##Analysis
@@ -53,13 +30,14 @@ res=roottotip(obsphy,dates)
 We run CreDating as follows:
 
 ```{r}
-res=credating(obsphy,dates,nbIts = 1000,rate=10)
-plot(res$tree)
+res=credating(harris2010$tree,harris2010$dates,nbIts = 2000,rate=6, neg=50)
+plot(res$tree, show.tip.label = F)
 axisPhylo(backward = F)
 ```
+
 Plot with credibility bars:
 ```{r}
-plotTree.errorbars(res$tree,res$CI)
+plotTree.errorbars(res$tree,res$CI,ftype="off")
 ```
 
 
