--- a/vignettes/example.Rmd
+++ b/vignettes/example.Rmd
@@ -10,7 +10,6 @@ output: html_notebook
 ```{r}
 library(CreDating)
 library(ape)
-library(phytools)
 set.seed(0)
 ```
 
@@ -54,22 +53,16 @@ We run CreDating as follows:
 
 ```{r}
 res=credating(obsphy,dates,nbIts = 1000,rate=10)
-plot(res$tree)
-axisPhylo(backward = F)
+plot(res)
 ```
 Plot with credibility bars:
 ```{r}
-plotTree.errorbars(res$tree,res$CI)
+plot(res,'treeCI')
 ```
 
 
 We can see what the MCMC traces look like:
 
 ```{r}
-  nc=ncol(res$record)
-  par(mfrow=c(2,2))
-  plot(res$record[,nc-2],main='Likelihood',type='l',xlab='Sampled iterations',ylab='')
-  plot(res$record[,nc-3],main='Date of root',type='l',xlab='Sampled iterations',ylab='')
-  plot(res$record[,nc-1],main='Rate',type='l',xlab='Sampled iterations',ylab='')
-  plot(res$record[,nc],main='Neg',type='l',xlab='Sampled iterations',ylab='')
+plot(res,'trace')
 ```
