--- a/vignettes/harris2010.Rmd
+++ b/vignettes/harris2010.Rmd
@@ -29,13 +29,13 @@ res=roottotip(harris2010$tree,harris2010$dates)
 We run CreDating as follows:
 
 ```{r}
-res=credating(harris2010$tree,harris2010$dates,nbIts = 2000,rate=6, neg=50)
-plot(res)
+res=credating(harris2010$tree,harris2010$dates,nbIts = 10000,rate=6, neg=50)
+plot(res,show.tip.label = F)
 ```
 
 Plot with credibility bars:
 ```{r}
-plot(res,'treeCI')
+plot(res,'treeCI',show.tip.label = F)
 ```
 
 
