--- a/vignettes/example.Rmd
+++ b/vignettes/example.Rmd
@@ -1,8 +1,10 @@
 ---
 title: "Example of using CreDating"
 author: "Xavier Didelot"
-date: "`r Sys.Date()`"
-output: html_notebook
+date: '`r Sys.Date()`'
+output:
+  pdf_document: default
+  html_notebook: default
 ---
 
 ##Initialisation
@@ -32,7 +34,7 @@ dates = leafDates(phy)
 
 On each branch we observe a number of substitutions which is distributed $\mathrm{Poisson}(rl)$
 where $l$ is the branch length and 
-$r=10$ per year is the real substitution rate.
+$r=1$ per year is the real substitution rate.
 ```{r}
 obsphy=phy
 obsphy$root.time=NULL
@@ -55,6 +57,7 @@ We run CreDating as follows:
 res=credating(obsphy,dates,nbIts = 10000)
 plot(res)
 ```
+
 Plot with credibility bars:
 ```{r}
 plot(res,'treeCI')
