--- a/vignettes/harris2010.Rmd
+++ b/vignettes/harris2010.Rmd
@@ -1,8 +1,10 @@
 ---
 title: "Example of using CreDating on the data of Harris et al (2010)"
 author: "Xavier Didelot"
-date: "`r Sys.Date()`"
-output: html_notebook
+date: '`r Sys.Date()`'
+output:
+  pdf_document: default
+  html_notebook: default
 ---
 
 ##Initialisation
