testing gamma model

--- a/vignettes/example.Rmd
+++ b/vignettes/example.Rmd
@@ -54,7 +54,7 @@ res=roottotip(obsphy,dates)
 We run CreDating as follows:
 
 ```{r}
-res=credating(obsphy,dates,nbIts = 10000)
+res=credating(obsphy,dates,nbIts = 1000,model=2)
 plot(res)
 ```
 
