--- a/vignettes/harris2010.Rmd
+++ b/vignettes/harris2010.Rmd
@@ -31,7 +31,7 @@ res=roottotip(harris2010$tree,harris2010$dates)
 We run CreDating as follows:
 
 ```{r}
-res=credating(harris2010$tree,harris2010$dates,nbIts = 10000)
+res=credate(harris2010$tree,harris2010$dates,nbIts = 50000)
 plot(res,show.tip.label = F)
 ```
 
