--- a/vignettes/example.Rmd
+++ b/vignettes/example.Rmd
@@ -31,6 +31,7 @@ We can extract the sampling dates.
 ```{r}
 dates = leafDates(phy)
 #dates[seq(2,20,2)]=NA#Oops, just lost half of the dates!
+dates[1]=NA#Oops, just lost a date!
 ```
 
 On each branch we observe a number of substitutions which is distributed $\mathrm{Poisson}(rl)$
@@ -40,7 +41,7 @@ $r=10$ per year is the real substitution rate.
 obsphy=phy
 obsphy$root.time=NULL
 #obsphy$edge.length=unlist(lapply(obsphy$edge.length*10,function (x) rpois(1,x)))
-obsphy$edge.length=unlist(lapply(obsphy$edge.length*10,function (x) rgamma(1,x,1)))
+obsphy$edge.length=unlist(lapply(obsphy$edge.length*100,function (x) rgamma(1,x,1)))
 res=roottotip(obsphy,dates,predInt='gamma',showTree=T)
 ```
 
@@ -57,7 +58,7 @@ res=roottotip(obsphy, dates, predInt = 'gamma', showTree = T)
 We run CreDating as follows:
 
 ```{r}
-res=credate(obsphy,dates,nbIts = 10000,model=3,findRoot = 2)
+res=credate(obsphy,dates,nbIts = 20000,model='gamma',findRoot = 2)
 plot(res)
 ```
 
