--- a/vignettes/harris2010.Rmd
+++ b/vignettes/harris2010.Rmd
@@ -3,8 +3,9 @@ title: "Example of using CreDating on the data of Harris et al (2010)"
 author: "Xavier Didelot"
 date: '`r Sys.Date()`'
 output:
-  pdf_document: default
+  html_document: default
   html_notebook: default
+  pdf_document: default
 ---
 
 ##Initialisation
@@ -31,7 +32,7 @@ res=roottotip(harris2010$tree,harris2010$dates,predInt = 'gamma')
 We run CreDating as follows:
 
 ```{r}
-res=credate(harris2010$tree,harris2010$dates,nbIts = 10000,model='gamma')
+res=credate(harris2010$tree,harris2010$dates,nbIts = 10000,model='gamma',showProgress = F)
 plot(res,show.tip.label = F)
 ```
 
