--- a/vignettes/example.Rmd
+++ b/vignettes/example.Rmd
@@ -3,8 +3,8 @@ title: "Example of using CreDating"
 author: "Xavier Didelot"
 date: '`r Sys.Date()`'
 output:
-  html_document: default
   html_notebook: default
+  html_document: default
   pdf_document: default
 ---
 
@@ -30,7 +30,7 @@ We can extract the sampling dates as follows:
 ```{r}
 dates = leafDates(phy)
 #dates[seq(2,20,2)]=NA#Oops, just lost half of the dates!
-dates[1]=NA#Oops, just lost a date!
+#dates[1]=NA#Oops, just lost a date!
 ```
 
 On each branch we observe a number of substitutions which is distributed $\mathrm{Gamma}(rl,1)$
@@ -38,16 +38,15 @@ where $l$ is the branch length and
 $r=10$ per year is the substitution rate. We can simulate an observed phylogenetic tree
 and perform a root-to-tip analysis as follows:
 ```{r}
-obsphy=simobsphy(phy, rate=10,model='gamma')
+obsphy=simobsphy(phy, rate=100,model='gamma')
+#obsphy$edge.length[11]=0
 res=roottotip(obsphy,dates,predInt='gamma',showTree=T)
 ```
 
 ##Unknown root
-Let's say we don't know where the root is, we might consider as a guess that it is at
-the midpoint:
+Let's say we don't know where the root is:
 ```{r}
-obsphy=phangorn::midpoint(obsphy)
-res=roottotip(obsphy, dates, predInt = 'gamma', showTree = T)
+obsphy=unroot(obsphy)
 ```
 
 ##Analysis
@@ -55,7 +54,7 @@ res=roottotip(obsphy, dates, predInt = 'gamma', showTree = T)
 We run CreDating as follows:
 
 ```{r}
-res=credate(obsphy,dates,nbIts = 10000,model='gamma',findRoot = 2,showProgress=F)
+res=credate(obsphy,dates,nbIts = 10000,model='gamma',findRoot = 2,showProgress=F,initRate=100)
 plot(res)
 ```
 
