--- a/vignettes/exampleRelaxed.Rmd
+++ b/vignettes/exampleRelaxed.Rmd
@@ -54,7 +54,7 @@ res=roottotip(obsphy,dates,predInt='gamma',showTree=T)
 We run CreDating as follows:
 
 ```{r}
-res=credate(obsphy,dates,nbIts = 10000,model='relaxedgamma',updateRoot = 2,showProgress=F,initRate=10,initRatevar = 100,updateRatevar = T)
+res=credate(unroot(obsphy),dates,nbIts = 10000,model='relaxedgamma',updateRoot = 2,showProgress=F,initRate=10,initRatevar = 100,updateRatevar = T)
 plot(res)
 ```
 
