--- a/vignettes/harris2010.Rmd
+++ b/vignettes/harris2010.Rmd
@@ -3,8 +3,6 @@ title: "Example of using CreDating on the data of Harris et al (2010)"
 author: "Xavier Didelot"
 date: '`r Sys.Date()`'
 output:
-  html_document: default
-  html_notebook: default
   pdf_document: default
 ---
 
@@ -32,7 +30,7 @@ res=roottotip(harris2010$tree,harris2010$dates)
 We run CreDating as follows:
 
 ```{r}
-res=credate(harris2010$tree,harris2010$dates, showProgress = F,nbIts = 1000,updateRoot=F)
+res=credate(harris2010$tree,harris2010$dates, nbIts = 10000)
 plot(res,show.tip.label = F)
 ```
 
