--- a/vignettes/exampleRec.Rmd
+++ b/vignettes/exampleRec.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Example of using CreDating on ClonalFrameML output"
+title: "Example of using CreDating after recombination analysis"
 author: "Xavier Didelot"
 date: '`r Sys.Date()`'
 output:
@@ -19,19 +19,26 @@ set.seed(0)
 A ClonalFrameML output can be read using:
 
 ```{r eval=FALSE}
-cfml=loadCFML(prefix='cfml-output')
+t=loadCFML(prefix='cfml-output')
 ```
 
-Instead, for the purpose of making this vignette self-contained, we will simulate a CFML output.
+A Gubbins output can be read using:
+
+```{r eval=FALSE}
+t=loadGubbins(prefix='gubbins-output')
+```
+
+
+Instead, for the purpose of making this vignette self-contained, we will simulate an output from a recombination analysis.
 This is just an object of class `phylo`, unrooted and with the added field `unrec`
 representing the proportion that is unrecombined for each branch.
 ```{r}
 dates=1990:2010
-cfml=unroot(simobsphy(simcoaltree(dates)))
-cfml$unrec=runif(length(cfml$edge.length))
-plot(cfml)
+t=unroot(simobsphy(simcoaltree(dates)))
+t$unrec=runif(length(t$edge.length))
+plot(t)
 axisPhylo(backward = F)
-edgelabels(round(100*cfml$unrec))
+edgelabels(round(100*t$unrec))
 ```
 
 ##Analysis
@@ -39,7 +46,7 @@ edgelabels(round(100*cfml$unrec))
 We run CreDating as follows:
 
 ```{r}
-res=credate(cfml,dates,useRec=T)
+res=credate(t,dates,useRec=T)
 plot(res,'treeCI')
 ```
 
