--- a/README.Rmd
+++ b/README.Rmd
@@ -2,6 +2,8 @@
 output: github_document
 ---
 
+[![Travis-CI Build Status](https://travis-ci.com/xavierdidelot/CreDating.svg?branch=master)](https://travis-ci.com/xavierdidelot/CreDating)
+
 <!-- README.md is generated from README.Rmd. Please edit that file -->
 
 ```{r, echo = FALSE}
