--- a/README.Rmd
+++ b/README.Rmd
@@ -3,6 +3,7 @@ output: github_document
 ---
 
 [![Travis-CI Build Status](https://travis-ci.com/xavierdidelot/CreDating.svg?branch=master)](https://travis-ci.com/xavierdidelot/CreDating)
+[![Coverage Status](https://codecov.io/github/xavierdidelot/CreDating/coverage.svg?branch=master)](https://codecov.io/github/xavierdidelot/CreDating?branch=master)
 
 <!-- README.md is generated from README.Rmd. Please edit that file -->
 
