--- a/vignettes/harris2010.Rmd
+++ b/vignettes/harris2010.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Example of using CreDating on the data of Harris et al (2010)"
+title: "Application of CreDating on Harris et al (2010)"
 author: "Xavier Didelot"
 date: '`r Sys.Date()`'
 output:
@@ -30,15 +30,11 @@ res=roottotip(harris2010$tree,harris2010$dates)
 We run CreDating as follows:
 
 ```{r}
-res=credate(harris2010$tree,harris2010$dates, nbIts = 1000)
-plot(res,show.tip.label = F)
-```
-
-Plot with credibility bars:
-```{r}
+ptm=proc.time()
+res=credate(unroot(harris2010$tree),harris2010$dates,nbIts=100000)
+print(proc.time()-ptm)
 plot(res,'treeCI',show.tip.label = F)
 ```
-
 
 We can see what the MCMC traces look like:
 
