--- a/vignettes/harris2010.Rmd
+++ b/vignettes/harris2010.Rmd
@@ -31,7 +31,7 @@ We run CreDating as follows:
 
 ```{r}
 ptm=proc.time()
-res=credate(unroot(harris2010$tree),harris2010$dates)
+res=credate(unroot(harris2010$tree),harris2010$dates,nbIts=1e5)
 print(proc.time()-ptm)
 plot(res,'treeCI',show.tip.label = F)
 ```
