--- a/vignettes/harris2010.Rmd
+++ b/vignettes/harris2010.Rmd
@@ -30,7 +30,7 @@ res=roottotip(harris2010$tree,harris2010$dates)
 We run CreDating as follows:
 
 ```{r}
-res=credate(unroot(harris2010$tree),harris2010$dates,nbIts=1e4,showProgress = T)
+res=credate(unroot(harris2010$tree),harris2010$dates,nbIts=1e4,showProgress = T,model='mixedgamma')
 plot(res,'treeCI',show.tip.label = F)
 ```
 
